--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -14,3 +14,26 @@ Start Emacs maximized.
 #+begin_src emacs-lisp
   (toggle-frame-maximized)
 #+end_src
+
+* Sensible Defaults
+Use HRS's [[https://github.com/hrs/sensible-defaults.el/][sensible-defaults.el]] for common-sense settings.
+#+begin_src emacs-lisp
+  (require 'url)
+  (setq-local sensible-defaults-loc (concat user-emacs-directory "defaults.el"))
+  (if (not (file-exists-p sensible-defaults-loc))
+      (url-copy-file "https://raw.githubusercontent.com/hrs/sensible-defaults.el/master/sensible-defaults.el" sensible-defaults-loc))
+
+  (load-file sensible-defaults-loc)
+  (sensible-defaults/use-all-settings)
+  (sensible-defaults/use-all-keybindings)
+#+end_src
+
+** Sensible Functions
+Define some sensible utility functions.
+
+#+begin_src emacs-lisp
+  (defun npg/append-to-path (path)
+    "Append a path to $PATH and exec-path"
+    (setenv "PATH" (concat (getenv "PATH") ":" path))
+    (add-to-list 'exec-path path))
+#+end_src
