--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -323,3 +323,19 @@ Open source block editor (=C-c '=) in the same window; make formats and tabs nat
         org-src-tab-acts-natively t
         org-src-window-setup 'current-window)
 #+end_src
+
+Indent headings by default, and enable =yasnippet= for both Org and LaTeX.
+
+#+begin_src emacs-lisp :tangle yes
+  (add-hook org-mode-hook 'org-indent-mode)
+#+end_src
+
+Enable =yasnippet= for both Org and LaTeX.
+#+begin_src emacs-lisp :tangle yes
+  (defun org-latex-yas ()
+    "Activate org and LaTeX expansion in org-mode buffers."
+    (yas-minor-mode)
+    (yas-activate-extra-mode 'latex-mode))
+
+  (add-hook org-mode-hook #'org-latex-yas)
+#+end_src
