--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -15,6 +15,11 @@ Start Emacs maximized.
   (toggle-frame-maximized)
 #+end_src
 
+Tell emacs where our linux configuration document lives.
+#+begin_src emacs-lisp :tangle yes
+  (setq linux-configuration-directory "~/projects/fedora-environment/")
+#+end_src
+
 * Sensible Defaults
 Use HRS's [[https://github.com/hrs/sensible-defaults.el/][sensible-defaults.el]] for common-sense settings.
 #+begin_src emacs-lisp
@@ -166,6 +171,28 @@ We'll add local mode hooks for flycheck.
 #+begin_src emacs-lisp
   (use-package flycheck)
 #+end_src
+
+** Keybindings
+Quickly open my Emacs and Fedora configuration org documents.
+
+#+begin_src emacs-lisp :tangle yes
+  (defun npg/visit-emacs-config ()
+    (interactive)
+    (find-file (concat user-emacs-directory "configuration.org")))
+
+  (global-set-key (kbd "C-c e e") 'npg/visit-emacs-config)
+#+end_src
+
+#+begin_src emacs-lisp :tangle yes
+  (defun npg/visit-linux-config ()
+    (interactive)
+    (find-file (concat linux-configuration-directory "fedora-environment.org")))
+
+    (global-set-key (kbd "C-c e f") 'npg/visit-linux-config)
+#+end_src
+
+#+RESULTS:
+: npg/visit-linux-config
 
 * Project Management
 ** =ag=
