--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -329,6 +329,11 @@ Line numbers don't play well with my =zsh= completion, so let's disable them.
             (lambda () (display-line-numbers-mode -1)))
 #+end_src
 * Org
+  We have already installed the Org package archive, so let's ensure we're using that latest released version.
+
+  #+begin_src emacs-lisp :tangle yes
+    (use-package org-plus-contrib)
+  #+end_src
 ** Appearance
 Since =nord-theme= doesn't have good heading contrast, use bullet heading indicators.
 
