--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -215,8 +215,15 @@ I am not yet an Emacs minimalist.
 Very basic for now.
 
 #+begin_src emacs-lisp
-  (ido-mode t)
+  (ido-mode 'both)
   (setq ido-enable-flex-matching t)
+
+  ; Use the current window when visiting files and buffers with ido
+  (setq ido-default-file-method 'selected-window)
+  (setq ido-default-buffer-method 'selected-window)
+
+  ; Use the current window for indirect buffer display
+  (setq org-indirect-buffer-display 'current-window)
 #+end_src
 
 ** =company=
